--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section class="intro">
             <div class="blockquote">
                 <h3>
-                    It's spectacular. It'a awesome.
+                    It's spectacular. It's awesome.
                  </h3>
                 <p>&mdash; Rory McIlroy</p>
               </div>
